<resources>
    <string name="app_name">SplashScreen</string>
    <string name="from">from</string>
    <string name="dixtech">DixTech</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="ou">ou</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="editar_dados">Editar Dados</string>
    <string name="crie_sua_conta">CRIE SUA CONTA</string>
    <string name="nome">Nome</string>
    <string name="insira_seu_nome">Insira seu nome...</string>
    <string name="insira_seu_email">Insira seu email...</string>
    <string name="insira_sua_senha">Insira sua senha...</string>
    <string name="concluir">Concluir</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="acessorios">Acessórios</string>
    <string name="vestuario">Vestuário</string>
    <string name="nomedoproduto">Nomedoproduto</string>
    <string name="c_digo_do_produto">Código do Produto</string>
    <string name="c_digo">Código</string>
    <string name="colecionaveis">Colecionáveis</string>
    <string name="livros">Livros</string>
    <string name="decoracoes">Decorações</string>
    <string name="editar">Editar</string>
    <string name="string_anicon">Anicon</string>
    <string name="fazer_logout">Fazer Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_empty">" "</string>
    <string name="loading">Carregando...</string>
    <string name="no_search_term">Informe um termo de busca</string>
    <string name="no_network">verifique sua conexão.</string>
    <string name="no_results">\"Nenhum resultado encontrado\"</string>
    <string name="sugest_es_de_itens">SUGESTÕES DE PRODUTOS</string>
    <string name="camiseta_one_piece_grupo">CAMISETA ONE PIECE GRUPO</string>
    <string name="frete_gr_tis">Frete grátis</string>
    <string name="r_69_90">R$ 69,90</string>
    <string name="camiseta_dupla_face_naruto_akatsuki">CAMISETA DUPLA FACE NARUTO AKATSUKI</string>
    <string name="r_79_90">R$ 79,90</string>
    <string name="moletom_digimon_megas">MOLETOM DIGIMON MEGAS</string>
    <string name="r_299_90">R$ 299,90</string>
    <string name="camiseta_attack_on_titan_muralha">CAMISETA ATTACK ON TITAN MURALHA</string>
    <string name="vestuario_sugest">Sugestões de Vestuário</string>
    <string name="acessorios_sugest">Sugestões de Acessórios</string>
    <string name="colecionaveis_sugest">Sugestões de Colecionáveis</string>
    <string name="livros_sugest">Sugestões de Livros</string>
    <string name="decoracoes_sugest">Sugestões de Decorações</string>
    <string name="ofertas_do_dia">Ofertas do Dia</string>
    <string name="mochila_kakashi_naruto">MOCHILA KAKASHI - NARUTO</string>
    <string name="r_359_90">R$ 359,90</string>
    <string name="r_24_90">R$ 24,90</string>
    <string name="suporte_para_celular_pop_the_seven_deadly_sins_hawk">SUPORTE PARA CELULAR POP THE SEVEN DEADLY SINS HAWK</string>
    <string name="chaveiro_demon_slayer_shinobu_kocho">CHAVEIRO DEMON SLAYER SHINOBU KOCHO</string>
    <string name="r_89_90">R$ 89,90</string>
    <string name="pin_digimon_patamon">PIN DIGIMON PATAMON</string>
    <string name="r_59_90">R$ 59,90</string>
    <string name="caneca_one_piece_bojuda_chopper">CANECA ONE PIECE BOJUDA CHOPPER</string>
    <string name="mang_the_promised_neverland">MANGÁ THE PROMISED NEVERLAND</string>
    <string name="a_camiseta_one_piece_grupo_um_produto_original_licenciado_e_exclusivo_piticas_estampa_inspirada_nos_personagens_do_mang_one_piece_o_anime_conta_as_aventuras_de_luffy_e_a_sua_tripula_o_os_piratas_do_chap_u_de_palha_que_exploram_a_grand_line_em_busca_do_tesouro_mais_procurado_do_mundo_na_piticas_prezamos_por_qualidade_diversidade_e_conforto_a_camiseta_foi_confeccionada_em_algod_o_e_conta_com_estilo_nico_feita_pelos_nossos_nerdsigners_para_vestir_seu_lado_f_vista_com_orgulho_vista_seu_lado_f">A Camiseta One Piece Grupo é um produto original, licenciado e exclusivo Piticas. Estampa inspirada nos personagens do mangá One Piece. O anime conta as aventuras de Luffy e a sua tripulação, os Piratas do Chapéu de Palha que exploram a Grand Line em busca do tesouro mais procurado do mundo. Na Piticas, prezamos por qualidade, diversidade e conforto. A camiseta foi confeccionada em algodão e conta com estilo único, feita pelos nossos nerdsigners para vestir seu lado fã! Vista com orgulho, vista seu lado fã.</string>

</resources>