<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logoapp" />

            <TextView
                android:id="@+id/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/arya_bold"
                android:text="@string/crie_sua_conta"
                android:textColor="@color/black"
                android:textSize="28sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </View>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/nome"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@id/editTextNome"
                    app:layout_constraintEnd_toEndOf="@id/editTextNome"
                    app:layout_constraintHorizontal_bias="0.02"
                    app:layout_constraintStart_toStartOf="@id/editTextNome"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextNome"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/outlined_black"
                    android:drawableEnd="@drawable/person_icon"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/insira_seu_nome"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textNome"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@id/editTextEmail"
                    app:layout_constraintEnd_toEndOf="@id/editTextEmail"
                    app:layout_constraintHorizontal_bias="0.02"
                    app:layout_constraintStart_toStartOf="@id/editTextEmail"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/outlined_black"
                    android:drawableEnd="@drawable/email"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/insira_seu_email"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textEmail"
                    tools:ignore="TouchTargetSizeCheck" />


                <TextView
                    android:id="@+id/textSenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/senha"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@id/editTextSenha"
                    app:layout_constraintEnd_toEndOf="@id/editTextSenha"
                    app:layout_constraintHorizontal_bias="0.02"
                    app:layout_constraintStart_toStartOf="@id/editTextSenha"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

                <EditText
                    android:id="@+id/editTextSenha"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/outlined_black"
                    android:drawableEnd="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/insira_sua_senha"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textSenha"
                    tools:ignore="TouchTargetSizeCheck" />


                <Button
                    android:id="@+id/btnCadastrar"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/black"
                    android:clickable="true"
                    android:drawableEnd="@drawable/icon_check"
                    android:focusable="true"
                    android:fontFamily="@font/allerta"
                    android:text="@string/concluir"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextSenha"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>