<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.Activity_detalhes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnvoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_white"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />

    <ImageView
        android:id="@+id/imgproduto"
        android:layout_width="350dp"
        android:layout_height="275dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/camiseta_one_piece"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnvoltar" />



    <TextView
        android:id="@+id/txtproduto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/camiseta_one_piece_grupo"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/imgproduto"
        app:layout_constraintTop_toBottomOf="@id/imgproduto" />

    <TextView
        android:id="@+id/txtcategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/vestuario"
        android:textColor="@color/red_primary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/imgproduto"
        app:layout_constraintTop_toBottomOf="@+id/txtproduto" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginTop="10dp"
        android:text="@string/a_camiseta_one_piece_grupo_um_produto_original_licenciado_e_exclusivo_piticas_estampa_inspirada_nos_personagens_do_mang_one_piece_o_anime_conta_as_aventuras_de_luffy_e_a_sua_tripula_o_os_piratas_do_chap_u_de_palha_que_exploram_a_grand_line_em_busca_do_tesouro_mais_procurado_do_mundo_na_piticas_prezamos_por_qualidade_diversidade_e_conforto_a_camiseta_foi_confeccionada_em_algod_o_e_conta_com_estilo_nico_feita_pelos_nossos_nerdsigners_para_vestir_seu_lado_f_vista_com_orgulho_vista_seu_lado_f"
        app:layout_constraintStart_toStartOf="@id/txtcategoria"
        app:layout_constraintTop_toBottomOf="@id/txtcategoria"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/r_69_90"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/imgproduto"
        app:layout_constraintEnd_toEndOf="@id/imgproduto"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>