<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VestuarioFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginVertical="20dp"
            android:elevation="10dp"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/white_background">

            <!--Titulo da box-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vestuario_sugest"
                android:textColor="@color/black"
                android:padding="10dp"
                android:paddingStart="18dp"
                android:textSize="15sp"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--Pordutos-->

            <!-- Constraint 1 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                >

                <!--Priemiro Produto-->


                <LinearLayout
                    android:id="@+id/produto_01"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/materialDivider"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/camiseta_one_piece"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r_69_90"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:textSize="13sp"
                        android:textColor="@color/almost_black"
                        android:text="@string/camiseta_one_piece_grupo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/frete_gr_tis"
                        android:textColor="@color/green"
                        android:textStyle="bold|italic" />
                </LinearLayout>


                <!--Divisor-->
                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/materialDivider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    app:dividerColor="@color/grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <!--Segundo Produto-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/materialDivider">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/camiseta_naruto"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r_79_90"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:textSize="13sp"
                        android:textColor="@color/almost_black"
                        android:text="@string/camiseta_dupla_face_naruto_akatsuki" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/frete_gr_tis"
                        android:textColor="@color/green"
                        android:textStyle="bold|italic" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Constraint 2-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                >

                <!--Primeiro Produto-->

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/materialDivider2"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/moletom_digimon"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r_299_90"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:textSize="13sp"
                        android:textColor="@color/almost_black"
                        android:text="@string/moletom_digimon_megas" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/frete_gr_tis"
                        android:textColor="@color/green"
                        android:textStyle="bold|italic" />
                </LinearLayout>


                <!--Divisor-->
                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/materialDivider2"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    app:dividerColor="@color/grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <!--Segundo Produto-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/materialDivider2">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/camiseta_attack_on_titan"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r_79_90"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:textSize="13sp"
                        android:textColor="@color/almost_black"
                        android:text="@string/camiseta_attack_on_titan_muralha" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/frete_gr_tis"
                        android:textColor="@color/green"
                        android:textStyle="bold|italic" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>